check_errors_v4.txt
    Checking lume-vulkan v0.1.0 (G:\Document-5\LumeVisual\LumeVisual\lume-vulkan)
error[E0432]: unresolved import `gpu_allocator::AllocationScheme`
 --> lume-vulkan\src\device.rs:5:37
  |
5 | use gpu_allocator::{MemoryLocation, AllocationScheme, AllocationSizes};
  |                                     ^^^^^^^^^^^^^^^^
  |                                     |
  |                                     no `AllocationScheme` in the root
  |                                     help: a similar name exists in the module: `AllocationSizes`
  |
  = help: consider importing this enum instead:
          gpu_allocator::vulkan::AllocationScheme

warning: unused import: `error`
 --> lume-vulkan\src\device.rs:2:17
  |
2 | use log::{info, error};
  |                 ^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `AllocationSizes`
 --> lume-vulkan\src\device.rs:5:55
  |
5 | use gpu_allocator::{MemoryLocation, AllocationScheme, AllocationSizes};
  |                                                       ^^^^^^^^^^^^^^^

warning: unused import: `error`
 --> lume-vulkan\src\swapchain.rs:2:17
  |
2 | use log::{info, error};
  |                 ^^^^^

warning: unused import: `HasDisplayHandle`
 --> lume-vulkan\src\instance.rs:3:25
  |
3 | use raw_window_handle::{HasDisplayHandle};
  |                         ^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
warning: `lume-vulkan` (lib) generated 4 warnings
error: could not compile `lume-vulkan` (lib) due to 1 previous error; 4 warnings emitted
